ingress/ingress_old.yaml
apiVersion: v1
items:
- apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata:
    annotations:
      nginx.ingress.kubernetes.io/rewrite-target: /
      nginx.ingress.kubernetes.io/ssl-redirect: "false"
    creationTimestamp: "2025-06-03T20:22:33Z"
    generation: 1
    name: ingress-wear-watch
    namespace: app-space
    resourceVersion: "1059"
    uid: 543906e0-69b3-4caf-b0cc-bea0a7de5a33
  spec:
    rules:
    - http:
        paths:
        - backend:
            service:
              name: wear-service
              port:
                number: 8080
          path: /wear
          pathType: Prefix
        - backend:
            service:
              name: video-service
              port:
                number: 8080
          path: /watch
          pathType: Prefix
  status:
    loadBalancer:
      ingress:
      - ip: 10.0.20.41 
kind: List
metadata:
  resourceVersion: ""
